Polish and humanize the summary for the High Contrast Text.
- Add new summary string.

Bug: 219163254
Test: manual test
Change-Id: I4902452b1c0f53e8e6a74b8529139a2d7c1cdeaf

--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -54,6 +54,7 @@
     <SwitchPreference
         android:key="toggle_high_text_contrast_preference"
         android:persistent="false"
+        android:summary="@string/accessibility_toggle_high_text_contrast_preference_summary"
         android:title="@string/accessibility_toggle_high_text_contrast_preference_title" />
 
     <com.android.settingslib.widget.LayoutPreference
