--- a/res/xml/one_handed_settings.xml
+++ b/res/xml/one_handed_settings.xml
@@ -22,6 +22,10 @@
     android:persistent="false"
     android:title="@string/one_handed_title">
 
+    <com.android.settingslib.widget.TopIntroPreference
+        android:key="gesture_one_handed_mode_intro"
+        android:title="@string/one_handed_mode_intro_text"/>
+
     <com.android.settingslib.widget.IllustrationPreference
         android:key="one_handed_header"
         settings:searchable="false"
@@ -33,10 +37,6 @@
         settings:keywords="@string/keywords_one_handed"
         settings:controller="com.android.settings.gestures.OneHandedMainSwitchPreferenceController"/>
 
-    <com.android.settingslib.widget.TopIntroPreference
-        android:key="gesture_one_handed_mode_intro_text"
-        android:title="@string/one_handed_mode_intro_text"/>
-
     <PreferenceCategory
         android:key="gesture_one_handed_mode_swipe_down"
         android:title="@string/one_handed_mode_swipe_down_category"
@@ -46,13 +46,18 @@
             android:key="gesture_one_handed_action_pull_screen_down"
             android:title="@string/one_handed_action_pull_down_screen_title"
             android:summary="@string/one_handed_action_pull_down_screen_summary"
-            settings:controller="com.android.settings.gestures.OneHandedActionPullDownPrefController"/>
+            settings:controller="com.android.settings.gesture_one_handed_mode_footer_textgestures.OneHandedActionPullDownPrefController"/>
 
         <com.android.settingslib.widget.SelectorWithWidgetPreference
             android:key="gesture_one_handed_action_show_notification"
             android:title="@string/one_handed_action_show_notification_title"
             android:summary="@string/one_handed_action_show_notification_summary"
             settings:controller="com.android.settings.gestures.OneHandedActionShowNotificationPrefController"/>
-
     </PreferenceCategory>
+
+    <com.android.settingslib.widget.FooterPreference
+        android:key="one_handed_mode_footer"
+        android:title="@string/one_handed_mode_footer_text"
+        android:selectable="false"
+        settings:searchable="false"/>
 </PreferenceScreen>
