--- a/res/drawable/dream_preview_rounded_bg.xml
+++ b/res/drawable/dream_preview_rounded_bg.xml
@@ -15,6 +15,8 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
        android:shape="rectangle">
+    <solid android:color="?androidprv:attr/colorSurfaceHighlight" />
     <corners android:radius="@dimen/dream_item_corner_radius"/>
 </shape>
