--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -33,7 +33,8 @@
         settings:iconEnd="@drawable/ic_add_24dp"
         settings:iconEndContentDescription="@string/font_size_make_larger_desc"
         settings:iconStart="@drawable/ic_remove_24dp"
-        settings:iconStartContentDescription="@string/font_size_make_smaller_desc"/>
+        settings:iconStartContentDescription="@string/font_size_make_smaller_desc"
+        settings:keywords="@string/keywords_font_size" />
 
     <com.android.settings.widget.LabeledSeekBarPreference
         android:key="display_size"
@@ -43,7 +44,8 @@
         settings:iconEnd="@drawable/ic_add_24dp"
         settings:iconEndContentDescription="@string/screen_zoom_make_larger_desc"
         settings:iconStart="@drawable/ic_remove_24dp"
-        settings:iconStartContentDescription="@string/screen_zoom_make_smaller_desc"/>
+        settings:iconStartContentDescription="@string/screen_zoom_make_smaller_desc"
+        settings:keywords="@string/keywords_display_size" />
 
     <SwitchPreference
         android:key="toggle_force_bold_text"
