Add accessibility annotations to dream settings.
Tooling should ignore the preview images, since the dream name and
summary is already specified as text views.

Test: locally on device, with Talkback
Bug: 213906361
Change-Id: I49f4b5d677d2645655e575764fb990de2e49fb59

--- a/res/layout/dream_preference_layout.xml
+++ b/res/layout/dream_preference_layout.xml
@@ -34,6 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/dream_preview_rounded_bg"
+            android:importantForAccessibility="no"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
             android:layout_width="@dimen/dream_preview_placeholder_width"
             android:layout_height="0dp"
             android:src="@drawable/dream_default_preview_icon"
+            android:importantForAccessibility="no"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="@+id/preview"
             app:layout_constraintBottom_toBottomOf="@+id/preview"
@@ -70,6 +72,7 @@
             android:layout_marginStart="@dimen/dream_item_icon_margin_start"
             android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
             android:gravity="center_vertical"
+            android:importantForAccessibility="no"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@+id/preview"
