Make homepage search bar remain persistent when scrolling
- Modify the scroll flag
- Add a background to avoid overlapping

Fix: 218825541
Test: visual
Change-Id: Ice88c1bb324780e72332dd810e654b1d17daafae

--- a/res/layout/settings_homepage_container.xml
+++ b/res/layout/settings_homepage_container.xml
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <include
                 android:id="@+id/homepage_app_bar_regular_phone_view"
