--- a/res/layout/tare_homepage.xml
+++ b/res/layout/tare_homepage.xml
@@ -60,5 +60,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:onClick="revertSettings"
-        android:text="@string/tare_revert" />
+        android:text="@string/tare_revert"
+        style="@style/ActionPrimaryButton" />
 </LinearLayout>
