--- a/res/values-hi/arrays.xml
+++ b/res/values-hi/arrays.xml
@@ -51,6 +51,10 @@
     <!-- no translation found for dark_ui_scheduler_preference_titles:0 (7465697698048662118) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:1 (4057198235664064478) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:2 (8842756744447000897) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:0 (8160793372964333729) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:1 (1570862084158925417) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:2 (1527300254382984555) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:3 (5231566512901956369) -->
   <string-array name="lock_after_timeout_entries">
     <item msgid="2223808927866488981">"तुरंत"</item>
     <item msgid="463591454172790676">"5 सेकंड"</item>
@@ -382,20 +386,7 @@
     <item msgid="1071057864355989694">"Cursive"</item>
     <item msgid="5012882784126308133">"Small capitals"</item>
   </string-array>
-  <string-array name="captioning_font_size_selector_titles">
-    <item msgid="923916134548435468">"बहुत छोटा"</item>
-    <item msgid="5738147437573674872">"छोटा"</item>
-    <item msgid="3942006483573485941">"डिफ़ॉल्ट"</item>
-    <item msgid="824386705928670045">"बड़ा"</item>
-    <item msgid="2790561781512874585">"बहुत बड़ा"</item>
-  </string-array>
-  <string-array name="captioning_font_size_selector_summaries">
-    <item msgid="5700290209695344464">"टेक्स्ट का साइज़ बहुत छोटा"</item>
-    <item msgid="4400431625665186389">"टेक्स्ट का साइज़ छोटा"</item>
-    <item msgid="2340994108094808362">"डिफ़ॉल्ट टेक्स्ट साइज़"</item>
-    <item msgid="6446684863055375405">"टेक्स्ट का साइज़ बड़ा"</item>
-    <item msgid="6838252010935384975">"टेक्स्ट का साइज़ बहुत बड़ा"</item>
-  </string-array>
+    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"डिफ़ॉल्ट"</item>
     <item msgid="4224714345662348668">"कोई नहीं"</item>
@@ -581,8 +572,17 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
-    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
-    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
-    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
-    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
+  <string-array name="nfc_payment_favor">
+    <item msgid="9104058551372383947">"हमेशा"</item>
+    <item msgid="5283665583617307336">"सिवाय तब, जब दूसरा पेमेंट ऐप्लिकेशन खुला हो"</item>
+  </string-array>
+  <string-array name="nfc_payment_favor_values">
+    <item msgid="2373999996715432397">"0"</item>
+    <item msgid="5305176997036663262">"1"</item>
+  </string-array>
+  <string-array name="switch_to_user_zero_when_docked_timeout_entries">
+    <item msgid="4844842227131211168">"कभी नहीं"</item>
+    <item msgid="5065465585332446709">"एक मिनट बाद"</item>
+    <item msgid="622807566366131941">"पांच मिनट बाद"</item>
+  </string-array>
 </resources>
