--- a/res/values-sq/arrays.xml
+++ b/res/values-sq/arrays.xml
@@ -51,6 +51,10 @@
     <!-- no translation found for dark_ui_scheduler_preference_titles:0 (7465697698048662118) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:1 (4057198235664064478) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:2 (8842756744447000897) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:0 (8160793372964333729) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:1 (1570862084158925417) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:2 (1527300254382984555) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:3 (5231566512901956369) -->
   <string-array name="lock_after_timeout_entries">
     <item msgid="2223808927866488981">"Menjëherë"</item>
     <item msgid="463591454172790676">"5 sek."</item>
@@ -382,20 +386,7 @@
     <item msgid="1071057864355989694">"I pjerrët"</item>
     <item msgid="5012882784126308133">"Shkronja të mëdha të minimizuara"</item>
   </string-array>
-  <string-array name="captioning_font_size_selector_titles">
-    <item msgid="923916134548435468">"Shumë e vogël"</item>
-    <item msgid="5738147437573674872">"E vogël"</item>
-    <item msgid="3942006483573485941">"E parazgjedhur"</item>
-    <item msgid="824386705928670045">"E madhe"</item>
-    <item msgid="2790561781512874585">"Shumë e madhe"</item>
-  </string-array>
-  <string-array name="captioning_font_size_selector_summaries">
-    <item msgid="5700290209695344464">"Madhësia e tekstit shumë e vogël"</item>
-    <item msgid="4400431625665186389">"Madhësia e tekstit e vogël"</item>
-    <item msgid="2340994108094808362">"Madhësia e tekstit e parazgjedhur"</item>
-    <item msgid="6446684863055375405">"Madhësia e tekstit e madhe"</item>
-    <item msgid="6838252010935384975">"Madhësia e tekstit shumë e madhe"</item>
-  </string-array>
+    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"E parazgjedhur"</item>
     <item msgid="4224714345662348668">"Asnjë"</item>
@@ -581,8 +572,17 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
-    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
-    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
-    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
-    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
+  <string-array name="nfc_payment_favor">
+    <item msgid="9104058551372383947">"Gjithmonë"</item>
+    <item msgid="5283665583617307336">"Përveçse kur është i hapur një aplikacion tjetër për pagesa"</item>
+  </string-array>
+  <string-array name="nfc_payment_favor_values">
+    <item msgid="2373999996715432397">"0"</item>
+    <item msgid="5305176997036663262">"1"</item>
+  </string-array>
+  <string-array name="switch_to_user_zero_when_docked_timeout_entries">
+    <item msgid="4844842227131211168">"Asnjëherë"</item>
+    <item msgid="5065465585332446709">"Pas 1 minute"</item>
+    <item msgid="622807566366131941">"Pas 5 minutash"</item>
+  </string-array>
 </resources>
