--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -51,6 +51,10 @@
     <!-- no translation found for dark_ui_scheduler_preference_titles:0 (7465697698048662118) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:1 (4057198235664064478) -->
     <!-- no translation found for dark_ui_scheduler_preference_titles:2 (8842756744447000897) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:0 (8160793372964333729) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:1 (1570862084158925417) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:2 (1527300254382984555) -->
+    <!-- no translation found for dark_ui_scheduler_with_bedtime_preference_titles:3 (5231566512901956369) -->
   <string-array name="lock_after_timeout_entries">
     <item msgid="2223808927866488981">"Hemen"</item>
     <item msgid="463591454172790676">"5 saniye"</item>
@@ -382,20 +386,7 @@
     <item msgid="1071057864355989694">"Bitişik el yazısı"</item>
     <item msgid="5012882784126308133">"Küçük boyutlu büyük harfler"</item>
   </string-array>
-  <string-array name="captioning_font_size_selector_titles">
-    <item msgid="923916134548435468">"Çok küçük"</item>
-    <item msgid="5738147437573674872">"Küçük"</item>
-    <item msgid="3942006483573485941">"Varsayılan"</item>
-    <item msgid="824386705928670045">"Büyük"</item>
-    <item msgid="2790561781512874585">"Çok büyük"</item>
-  </string-array>
-  <string-array name="captioning_font_size_selector_summaries">
-    <item msgid="5700290209695344464">"Çok küçük metin boyutu"</item>
-    <item msgid="4400431625665186389">"Küçük metin boyutu"</item>
-    <item msgid="2340994108094808362">"Varsayılan metin boyutu"</item>
-    <item msgid="6446684863055375405">"Büyük metin boyutu"</item>
-    <item msgid="6838252010935384975">"Çok büyük metin boyutu"</item>
-  </string-array>
+    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Varsayılan"</item>
     <item msgid="4224714345662348668">"Yok"</item>
@@ -581,8 +572,17 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
-    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
-    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
-    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
-    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
+  <string-array name="nfc_payment_favor">
+    <item msgid="9104058551372383947">"Her zaman"</item>
+    <item msgid="5283665583617307336">"Başka bir ödeme uygulaması açık olmadığında"</item>
+  </string-array>
+  <string-array name="nfc_payment_favor_values">
+    <item msgid="2373999996715432397">"0"</item>
+    <item msgid="5305176997036663262">"1"</item>
+  </string-array>
+  <string-array name="switch_to_user_zero_when_docked_timeout_entries">
+    <item msgid="4844842227131211168">"Hiçbir zaman"</item>
+    <item msgid="5065465585332446709">"1 dakika sonra"</item>
+    <item msgid="622807566366131941">"5 dakika sonra"</item>
+  </string-array>
 </resources>
