Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I47878174684f827d121e953b91c66d89183b26c9

--- a/res/values-bg/arrays.xml
+++ b/res/values-bg/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Курсивни"</item>
     <item msgid="5012882784126308133">"Малки главни букви"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Много малък"</item>
+    <item msgid="5738147437573674872">"Малък"</item>
+    <item msgid="4691660235626027304">"Средно"</item>
+    <item msgid="824386705928670045">"Голям"</item>
+    <item msgid="2790561781512874585">"Много голям"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Стандартни"</item>
     <item msgid="4224714345662348668">"Няма"</item>
