--- a/res/values-km/arrays.xml
+++ b/res/values-km/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"សរសេរ​ជាប់​គ្នា"</item>
     <item msgid="5012882784126308133">"អក្សរ​ពុម្ព​ធំ​ល្អិត"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"តូច​ណាស់"</item>
+    <item msgid="5738147437573674872">"តូច"</item>
+    <item msgid="4691660235626027304">"មធ្យម"</item>
+    <item msgid="824386705928670045">"ធំ"</item>
+    <item msgid="2790561781512874585">"ធំ​ណាស់"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"លំនាំដើម"</item>
     <item msgid="4224714345662348668">"គ្មាន"</item>
