--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"जोडिएको लेखाइ"</item>
     <item msgid="5012882784126308133">"लघु दीर्घाक्षर"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"ज्यादै साना"</item>
+    <item msgid="5738147437573674872">"सानो"</item>
+    <item msgid="4691660235626027304">"मध्यम"</item>
+    <item msgid="824386705928670045">"ठुलो"</item>
+    <item msgid="2790561781512874585">"ज्यादै ठुलो"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"डिफल्ट"</item>
     <item msgid="4224714345662348668">"कुनै पनि होइन"</item>
