--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Cursief"</item>
     <item msgid="5012882784126308133">"Kleine kapitalen"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Zeer klein"</item>
+    <item msgid="5738147437573674872">"Klein"</item>
+    <item msgid="4691660235626027304">"Normaal"</item>
+    <item msgid="824386705928670045">"Groot"</item>
+    <item msgid="2790561781512874585">"Zeer groot"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Standaard"</item>
     <item msgid="4224714345662348668">"Geen"</item>
