--- a/res/values-gl/arrays.xml
+++ b/res/values-gl/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Cursiva"</item>
     <item msgid="5012882784126308133">"Versaleta"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Moi pequeno"</item>
+    <item msgid="5738147437573674872">"Pequeno"</item>
+    <item msgid="4691660235626027304">"Mediano"</item>
+    <item msgid="824386705928670045">"Grande"</item>
+    <item msgid="2790561781512874585">"Moi grande"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Predeterminado"</item>
     <item msgid="4224714345662348668">"Ningún"</item>
