--- a/res/values-iw/arrays.xml
+++ b/res/values-iw/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"כתב-יד"</item>
     <item msgid="5012882784126308133">"רישיות קטנות"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"קטן מאוד"</item>
+    <item msgid="5738147437573674872">"קטן"</item>
+    <item msgid="4691660235626027304">"בינוני"</item>
+    <item msgid="824386705928670045">"גדול"</item>
+    <item msgid="2790561781512874585">"גדול מאוד"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"ברירת מחדל"</item>
     <item msgid="4224714345662348668">"ללא"</item>
