--- a/res/values-ko/arrays.xml
+++ b/res/values-ko/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"필기체"</item>
     <item msgid="5012882784126308133">"작은 대문자"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"아주 작게"</item>
+    <item msgid="5738147437573674872">"작게"</item>
+    <item msgid="4691660235626027304">"중간"</item>
+    <item msgid="824386705928670045">"크게"</item>
+    <item msgid="2790561781512874585">"아주 크게"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"기본값"</item>
     <item msgid="4224714345662348668">"사용 안함"</item>
