--- a/res/values-lo/arrays.xml
+++ b/res/values-lo/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"ຂຽນເຄືອ"</item>
     <item msgid="5012882784126308133">"ໂຕພິມນ້ອຍ"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"ນ້ອຍຫຼາຍ"</item>
+    <item msgid="5738147437573674872">"ນ້ອຍ"</item>
+    <item msgid="4691660235626027304">"ປານກາງ"</item>
+    <item msgid="824386705928670045">"ໃຫຍ່"</item>
+    <item msgid="2790561781512874585">"ໃຫຍ່ຫຼາຍ"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"ຄ່າເລີ່ມຕົ້ນ"</item>
     <item msgid="4224714345662348668">"ບໍ່ມີ"</item>
