--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"କର୍ସିଭ"</item>
     <item msgid="5012882784126308133">"ଛୋଟ ଆକାରର ଅକ୍ଷର"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"ବହୁତ ଛୋଟ"</item>
+    <item msgid="5738147437573674872">"ଛୋଟ"</item>
+    <item msgid="4691660235626027304">"ମଧ୍ୟମ"</item>
+    <item msgid="824386705928670045">"ବହୁତ ବଡ଼"</item>
+    <item msgid="2790561781512874585">"ବହୁତ ବଡ଼"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"ଡିଫଲ୍ଟ"</item>
     <item msgid="4224714345662348668">"କିଛି ନୁହେଁ"</item>
