--- a/res/values-sl/arrays.xml
+++ b/res/values-sl/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Ležeče"</item>
     <item msgid="5012882784126308133">"Pomanjšane velike črke"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Zelo majhna"</item>
+    <item msgid="5738147437573674872">"Majhna"</item>
+    <item msgid="4691660235626027304">"Srednja"</item>
+    <item msgid="824386705928670045">"Velika"</item>
+    <item msgid="2790561781512874585">"Zelo velika"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Privzeto"</item>
     <item msgid="4224714345662348668">"Brez"</item>
