--- a/res/values-th/arrays.xml
+++ b/res/values-th/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"คัดลายมือ"</item>
     <item msgid="5012882784126308133">"อักษรตัวพิมพ์ใหญ่ขนาดเล็ก"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"เล็กมาก"</item>
+    <item msgid="5738147437573674872">"เล็ก"</item>
+    <item msgid="4691660235626027304">"ปานกลาง"</item>
+    <item msgid="824386705928670045">"ใหญ่"</item>
+    <item msgid="2790561781512874585">"ใหญ่มาก"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"ค่าเริ่มต้น"</item>
     <item msgid="4224714345662348668">"ไม่มี"</item>
