--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Bitişik el yazısı"</item>
     <item msgid="5012882784126308133">"Küçük boyutlu büyük harfler"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Çok küçük"</item>
+    <item msgid="5738147437573674872">"Küçük"</item>
+    <item msgid="4691660235626027304">"Orta"</item>
+    <item msgid="824386705928670045">"Büyük"</item>
+    <item msgid="2790561781512874585">"Çok büyük"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Varsayılan"</item>
     <item msgid="4224714345662348668">"Yok"</item>
