--- a/res/values-uz/arrays.xml
+++ b/res/values-uz/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Qiya"</item>
     <item msgid="5012882784126308133">"Kichik bosh harflar"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Juda kichik"</item>
+    <item msgid="5738147437573674872">"Kichik"</item>
+    <item msgid="4691660235626027304">"Oʻrtacha"</item>
+    <item msgid="824386705928670045">"Katta"</item>
+    <item msgid="2790561781512874585">"Juda katta"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Standart"</item>
     <item msgid="4224714345662348668">"Hech qanday"</item>
