--- a/res/values-vi/arrays.xml
+++ b/res/values-vi/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"Chữ thảo"</item>
     <item msgid="5012882784126308133">"Chữ viết hoa nhỏ"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"Rất nhỏ"</item>
+    <item msgid="5738147437573674872">"Nhỏ"</item>
+    <item msgid="4691660235626027304">"Vừa"</item>
+    <item msgid="824386705928670045">"Lớn"</item>
+    <item msgid="2790561781512874585">"Rất lớn"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"Mặc định"</item>
     <item msgid="4224714345662348668">"Không có"</item>
