--- a/res/values-zh-rHK/arrays.xml
+++ b/res/values-zh-rHK/arrays.xml
@@ -386,7 +386,13 @@
     <item msgid="1071057864355989694">"草書"</item>
     <item msgid="5012882784126308133">"小楷"</item>
   </string-array>
-    <!-- no translation found for captioning_font_size_selector_titles:2 (4691660235626027304) -->
+  <string-array name="captioning_font_size_selector_titles">
+    <item msgid="923916134548435468">"非常小"</item>
+    <item msgid="5738147437573674872">"小"</item>
+    <item msgid="4691660235626027304">"中"</item>
+    <item msgid="824386705928670045">"大"</item>
+    <item msgid="2790561781512874585">"非常大"</item>
+  </string-array>
   <string-array name="captioning_edge_type_selector_titles">
     <item msgid="70686029249840227">"預設"</item>
     <item msgid="4224714345662348668">"無"</item>
