Add dream descriptions to dream settings UI.
The dream descriptions will now be shown underneath the title, if the
dream has provided one.

We also cleaned up the icon view, instead merging it with the title view
to ensure proper alignment between the icon and title.

Bug: 221078654
Test: locally on device
Test: atest DreamPickerControllerTest
Change-Id: I00fd69c294f1a5fbcbc5392eba342f2896f6d9ed

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -445,10 +445,12 @@
     <dimen name="dream_item_corner_radius">28dp</dimen>
     <dimen name="dream_item_content_padding">8dp</dimen>
     <dimen name="dream_item_icon_size">20dp</dimen>
-    <dimen name="dream_item_title_margin_top">18dp</dimen>
+    <dimen name="dream_item_summary_text_size">14sp</dimen>
+    <dimen name="dream_item_title_margin_top">16dp</dimen>
     <dimen name="dream_item_title_margin_bottom">8dp</dimen>
-    <dimen name="dream_item_title_margin_start">18dp</dimen>
-    <dimen name="dream_item_icon_margin_start">10dp</dimen>
+    <dimen name="dream_item_title_text_size">16sp</dimen>
+    <dimen name="dream_item_icon_padding">18dp</dimen>
+    <dimen name="dream_item_title_margin_horizontal">8dp</dimen>
     <dimen name="dream_preference_card_padding">16dp</dimen>
     <dimen name="dream_preference_margin_bottom">20dp</dimen>
     <dimen name="dream_picker_margin_horizontal">48dp</dimen>
