--- a/res/layout/dream_preference_layout.xml
+++ b/res/layout/dream_preference_layout.xml
@@ -64,36 +64,38 @@
             app:layout_constraintStart_toStartOf="@+id/preview"
             app:layout_constraintEnd_toEndOf="@+id/preview"/>
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="@dimen/dream_item_icon_size"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/dream_item_title_margin_top"
-            android:layout_marginStart="@dimen/dream_item_icon_margin_start"
-            android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
-            android:gravity="center_vertical"
-            android:importantForAccessibility="no"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@+id/preview"
-            app_layout_constraintEnd_toStartOf="@+id/title_text"
-            app:layout_constraintStart_toStartOf="parent"/>
-
         <TextView
             android:id="@+id/title_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dream_item_title_margin_top"
-            android:layout_marginStart="@dimen/dream_item_title_margin_start"
+            android:layout_marginHorizontal="@dimen/dream_item_title_margin_horizontal"
             android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textSize="16sp"
+            android:textSize="@dimen/dream_item_title_text_size"
             android:textColor="@color/dream_card_text_color_state_list"
+            android:drawablePadding="@dimen/dream_item_icon_padding"
             app:layout_constraintTop_toBottomOf="@+id/preview"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/icon"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/summary_text"/>
+
+        <TextView
+            android:id="@+id/summary_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dream_item_title_margin_horizontal"
+            android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textSize="@dimen/dream_item_summary_text_size"
+            android:textColor="@color/dream_card_text_color_state_list"
+            app:layout_constraintTop_toBottomOf="@+id/title_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
