Introduce developer option for Stylus handwriting
Introduce a new developer option for Input Method:
Stylus handwriting: when this setting is enabled, currently selected
input method receives stylus events after focus on editor.

Bug: 219777744
Test: atest StylusHandwritingPreferenceControllerTest
Change-Id: Ia6335df60aae56973ed54bec1a243ea1de3aa6ad

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -709,4 +709,15 @@
             android:key="location_indicator_settings"
             settings:controller="com.android.settings.location.LocationIndicatorsPreferenceController"/>
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="input_method_category"
+        android:title="@string/input_method_category"
+        android:order="1400">
+
+        <SwitchPreference
+            android:key="stylus_handwriting"
+            android:title="@string/stylus_handwriting"
+            android:summary="@string/stylus_handwriting_summary" />
+    </PreferenceCategory>
 </PreferenceScreen>
