Override the text size attribute of "Preview" in the text and reading options.
Fix: 220265332
Test: manual test
Change-Id: Ic06e3dd8b7464b1c09745b10c063a4cafbaf0e2d

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -734,6 +734,7 @@
         parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" >
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:padding">6dp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Widget.PopupWindow.Settings"
