Update dream preview button text color
Bug: 219761637
Test: locally on device
Change-Id: I6b98b400c31ca5a296f5ed095b52ff7d8ea36c44

--- a/res/layout/dream_preview_button.xml
+++ b/res/layout/dream_preview_button.xml
@@ -24,10 +24,10 @@
     android:layout_height="wrap_content"
     android:text="@string/dream_preview_button_title"
     android:textAllCaps="false"
-    android:textColor="?androidprv:attr/textColorOnAccent"
+    android:textColor="?android:attr/textColorPrimaryInverse"
     android:theme="@style/Theme.CollapsingToolbar.Settings"
     android:layout_marginBottom="16dp"
     android:layout_gravity="bottom|center"
     app:backgroundTint="?androidprv:attr/colorAccentPrimaryVariant"
-    app:iconTint="?androidprv:attr/textColorOnAccent"
+    app:iconTint="?android:attr/textColorPrimaryInverse"
     app:icon="@drawable/dream_preview_icon"/>
