Fix the problem that the autofill could be searched.
PreferenceCategory will not be indexed by default. The auto fill
category use the AutofillPreferenceCategory class in the xml so
it will be indexed.
The solution is to create a controller to replace AutofillPreferenceCategory.

Fix: 185914894
Test: manual adb test to see the log
Change-Id: Id0e3bcc33a3132434a6bd1fe91e1c6915116d06d

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -648,7 +648,7 @@
             android:title="@string/reset_shortcut_manager_throttling" />
     </PreferenceCategory>
 
-    <com.android.settings.development.autofill.AutofillPreferenceCategory
+    <PreferenceCategory
         android:key="debug_autofill_category"
         android:title="@string/debug_autofill_category"
         settings:searchable="false"
@@ -672,7 +672,7 @@
             android:key="autofill_reset_developer_options"
             android:title="@string/autofill_reset_developer_options" />
 
-    </com.android.settings.development.autofill.AutofillPreferenceCategory>
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="storage_category"
