Don't show the "When to show" PreferenceCategory
If the ambient display isn't available. This includes
AOD wakeup gestures.

Test: manual
Fixes: 195413949
Change-Id: Ief1876e231288274a35db2fb185ac92864450d48

--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -79,6 +79,7 @@
     <PreferenceCategory
         android:key="ambient_display_category_when_to_show"
         android:title="@string/ambient_display_category_triggers"
+        settings:controller="com.android.settings.display.AmbientDisplayWhenToShowPreferenceController"
         android:order="1000">
 
         <com.android.settingslib.RestrictedSwitchPreference
