Enable "Remove animation" assistive technologies in setup
In Android T, adding more animations into SUW so want to make sure users can turn off animation if needed. The animation should also follow the flashing/strobing guidelines to ensure they're not seizure-inducing.

Bug: 223265388
Test: Manual testing
Change-Id: I8f443adddb6941ed6deae2f3b53d35f21ebcfd36

--- a/res/xml/accessibility_color_and_motion.xml
+++ b/res/xml/accessibility_color_and_motion.xml
@@ -40,6 +40,7 @@
         settings:controller="com.android.settings.accessibility.ColorInversionPreferenceController"/>
 
     <SwitchPreference
+        android:icon="@drawable/ic_accessibility_animation"
         android:key="toggle_disable_animations"
         android:persistent="false"
         android:summary="@string/accessibility_disable_animations_summary"
